fixed logo from moving when window collapses

--- a/public/style.css
+++ b/public/style.css
@@ -55,6 +55,8 @@ label {
 
 #logo {
   margin-right: 39em;
+  position: fixed;
+  left: 43%;
 }
 
 .multi-button {
